[package]
name = "her"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.23.4"
clap = { version = "4.5.9", features = ["derive"] }
confy = "0.6.1"
ratatui = "0.27.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
rev_buf_reader = "0.3.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.204"
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
